--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -44,6 +44,11 @@ form.register=Register
 
 #user page
 user.page.title=User's personal page
-user.id=ID
 user.role=Role
 user.rating=Rating
+
+#footer
+help_title=Help
+about_rent_title=About rental
+information_title=Information
+copyright=All rights reserved © Site development
