--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -10,6 +10,7 @@ rules_title=Rental rules
 stocks_title=Stock
 catalog_title=Catalog
 contacts_title=Contacts
+incorrect_data=Incorrect data, please try again
 
 #main page content
 searching_form_title=Search for available cars
