--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -4,6 +4,7 @@ header.button.en=EN
 hello=Hello
 log_in_title=Log in
 log_out_title=Log out
+go_to_main_page=go to main page
 registration_title=Registration
 news_title=News
 rules_title=Rental rules
@@ -11,6 +12,7 @@ stocks_title=Stock
 catalog_title=Catalog
 contacts_title=Contacts
 incorrect_data=Incorrect data, please try again
+error_404_title=Sorry, the page not found!
 
 #main page content
 searching_form_title=Search for available cars
