--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -13,6 +13,9 @@ catalog_title=Catalog
 contacts_title=Contacts
 incorrect_data=Incorrect data, please try again
 error_404_title=Sorry, the page not found!
+error_500_title=Sorry, unexpected error!
+error_500_desc=We are working on fixing the problem. Be back soon
+stack-trace-title=If you are a developer this will help you
 
 #main page content
 searching_form_title=Search for available cars
@@ -46,9 +49,11 @@ form.search_title=Search
 form.register=Register
 
 #user page
-user.page.title=User's personal page
 user.role=Role
 user.rating=Rating
+user.orders.title=Your orders
+user.passport_data.title=Passport data
+user.cards.title=Bank cards
 
 #footer
 help_title=Help
