--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -16,6 +16,7 @@ error_404_title=Sorry, the page not found!
 error_500_title=Sorry, unexpected error!
 error_500_desc=We are working on fixing the problem. Be back soon
 stack-trace-title=If you are a developer this will help you
+error.data_retrieve=Data retrieval error, please try later
 
 #main page content
 searching_form_title=Search for available cars
@@ -54,6 +55,25 @@ user.rating=Rating
 user.orders.title=Your orders
 user.passport_data.title=Passport data
 user.cards.title=Bank cards
+
+#order
+user.order.date=Date
+user.order.status=Status
+user.order.rental_start=Rental start
+user.order.rental_end=Rental end
+user.order.car=Rented car
+user.order.order_price=Order price
+user.order.not_exists=You have no orders yet
+
+#passport
+user.surname=Surname
+user.name=Name
+user.thirdname=Third Name
+user.date_of_birth=Date of birth
+user.address=Address
+user.passport.serial_and_number=Serial and number
+user.passport.issued_by=Issued by
+user.passport.date_of_issue=Date of issue
 
 #footer
 help_title=Help
