--- a/src/main/resources/appLocalization/app_ru.properties
+++ b/src/main/resources/appLocalization/app_ru.properties
@@ -16,6 +16,7 @@ error_404_title=Извините, страница не найдена!
 error_500_title=Извините, непредвиденная ошибка!
 error_500_desc=Мы работаем над устранением ошибки. Скоро все будет работать
 stack-trace-title=Если вы разработчик, это вам поможет
+error.data_retrieve=Ошибка получения данных, попробуйте позже
 
 #main page content
 searching_form_title=Поиск доступных авто
@@ -54,6 +55,25 @@ user.rating=Рейтинг
 user.orders.title=Ваши заказы
 user.passport_data.title=Паспортные данные
 user.cards.title=Банковские карты
+
+#order
+user.order.date=Дата
+user.order.status=Статус
+user.order.rental_start=Начало аренды
+user.order.rental_end=Конец аренды
+user.order.car=Автомобиль
+user.order.order_price=Сумма аренды
+user.order.not_exists=У вас еще не было заказов
+
+#passport
+user.surname=Фамилия
+user.name=Имя
+user.thirdname=Отчество
+user.date_of_birth=Дата рождения
+user.address=Адрес
+user.passport.serial_and_number=Серия и номер
+user.passport.issued_by=Выдан
+user.passport.date_of_issue=Дата выдачи
 
 #footer
 help_title=Помощь
