--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -57,6 +57,13 @@ user.passport_data.title=Passport data
 user.cards.title=Bank cards
 
 #order
+user.order.status.new=new
+user.order.status.in_process=in process
+user.order.status.paid=paid
+user.order.status.rent=rent
+user.order.status.ended=ended
+user.order.status.expired=expired
+user.order.status.canceled=canceled
 user.order.date=Date
 user.order.status=Status
 user.order.rental_start=Rental start
@@ -64,6 +71,8 @@ user.order.rental_end=Rental end
 user.order.car=Rented car
 user.order.order_price=Order price
 user.order.not_exists=You have no orders yet
+user.order.message_start=Go to the
+user.order.message_end=to place an order
 
 #passport
 user.surname=Surname
@@ -74,6 +83,14 @@ user.address=Address
 user.passport.serial_and_number=Serial and number
 user.passport.issued_by=Issued by
 user.passport.date_of_issue=Date of issue
+
+#card
+user.card.not_exists=You don't have any linked cards yet
+
+#car
+car.transmission_title=Transmission
+car.transmission.at=Automatic
+car.transmission.mt=Mechanical
 
 #footer
 help_title=Help
