--- a/src/main/resources/appLocalization/app_ru.properties
+++ b/src/main/resources/appLocalization/app_ru.properties
@@ -57,6 +57,13 @@ user.passport_data.title=Паспортные данные
 user.cards.title=Банковские карты
 
 #order
+user.order.status.new=новый
+user.order.status.in_process=обрабатывается
+user.order.status.paid=оплачен
+user.order.status.rent=аренда
+user.order.status.ended=завершен
+user.order.status.expired=просрочен
+user.order.status.canceled=отменен
 user.order.date=Дата
 user.order.status=Статус
 user.order.rental_start=Начало аренды
@@ -64,6 +71,8 @@ user.order.rental_end=Конец аренды
 user.order.car=Автомобиль
 user.order.order_price=Сумма аренды
 user.order.not_exists=У вас еще не было заказов
+user.order.message_start=Перейдите в
+user.order.message_end=чтобы сделать заказ
 
 #passport
 user.surname=Фамилия
@@ -74,6 +83,14 @@ user.address=Адрес
 user.passport.serial_and_number=Серия и номер
 user.passport.issued_by=Выдан
 user.passport.date_of_issue=Дата выдачи
+
+#card
+user.card.not_exists=У вас еще нет привязанных карт
+
+#car
+car.transmission_title=Трансмиссия
+car.transmission.at=Автоматическая
+car.transmission.mt=Механическая
 
 #footer
 help_title=Помощь
