--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -52,7 +52,9 @@ form.register=Register
 #user page
 user.role=Role
 user.rating=Rating
+user.discount=Your discount
 user.orders.title=Your orders
+user.all_orders_title=All orders
 user.passport_data.title=Passport data
 user.cards.title=Bank cards
 
@@ -70,6 +72,7 @@ user.order.rental_start=Rental start
 user.order.rental_end=Rental end
 user.order.car=Rented car
 user.order.order_price=Order price
+user.order.comment=Comment
 user.order.not_exists=You have no orders yet
 user.order.message_start=Go to the
 user.order.message_end=to place an order
