--- a/src/main/resources/appLocalization/app_ru.properties
+++ b/src/main/resources/appLocalization/app_ru.properties
@@ -52,7 +52,9 @@ form.register=Зарегистрироваться
 #user page
 user.role=Роль
 user.rating=Рейтинг
+user.discount=Ваша скидка
 user.orders.title=Ваши заказы
+user.all_orders_title=Все заказы
 user.passport_data.title=Паспортные данные
 user.cards.title=Банковские карты
 
@@ -70,6 +72,7 @@ user.order.rental_start=Начало аренды
 user.order.rental_end=Конец аренды
 user.order.car=Автомобиль
 user.order.order_price=Сумма аренды
+user.order.comment=Комментарий
 user.order.not_exists=У вас еще не было заказов
 user.order.message_start=Перейдите в
 user.order.message_end=чтобы сделать заказ
