--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -2,28 +2,28 @@
 header.button.ru=RU
 header.button.en=EN
 hello=Hello
-log_in_title=Log in
-log_out_title=Log out
+log_in=Log in
+log_out=Log out
 go_to_main_page=go to main page
-registration_title=Registration
-news_title=News
-rules_title=Rental rules
-stocks_title=Stock
-catalog_title=Catalog
-contacts_title=Contacts
+registration=Registration
+news=News
+rules=Rental rules
+stocks=Stock
+catalog=Catalog
+contacts=Contacts
 incorrect_data=Incorrect data, please try again
 error_404_title=Sorry, the page not found!
 error_500_title=Sorry, unexpected error!
 error_500_desc=We are working on fixing the problem. Be back soon
-stack-trace-title=If you are a developer this will help you
+stack_trace_title=If you are a developer this will help you
 error.data_retrieve=Data retrieval error, please try later
+price_per_day=BYN per day
+to_rent=Rent
 
 #main page content
-searching_form_title=Search for available cars
+searching_form=Search for available cars
 pick_up_date=Pick-up date
-pick_up_time=Pick-up time
 drop_off_date=Drop-off date
-drop_off_time=Drop-off time
 
 #log in page
 login.wrong_data=Wrong login or password!
@@ -36,67 +36,83 @@ reg.successful=You are registered successfully!
 reg_info.text.start=Now you can
 reg_info.text.link=log in
 reg_info.text.end=with your username and password
-reg_user_exists=Sorry, this user already exists!
+reg.user_exists=Sorry, this user already exists!
 reg.error=Sorry registration error, please try again later!
 reg.agreement=By clicking the "Register" button,
 reg.agreement.link=you consent to the processing of your personal data
 
 #form data
-form.login=Login
-form.password=Password
-form.email=Email
-form.phone=Phone
-form.search_title=Search
-form.register=Register
+login=Login
+password=Password
+email=Email
+phone=Phone
+search=Search
+register=Register
 
-#user page
+#personal page
 user.role=Role
 user.rating=Rating
 user.discount=Your discount
-user.orders.title=Your orders
-user.all_orders_title=All orders
-user.passport_data.title=Passport data
-user.cards.title=Bank cards
+user.orders=Your orders
+user.all_orders=All orders
+user.all_users=All users
+user.passport_data=Passport data
+user.cards=Bank cards
 
 #order
-user.order.status.new=new
-user.order.status.in_process=in process
-user.order.status.paid=paid
-user.order.status.rent=rent
-user.order.status.ended=ended
-user.order.status.expired=expired
-user.order.status.canceled=canceled
-user.order.date=Date
-user.order.status=Status
-user.order.rental_start=Rental start
-user.order.rental_end=Rental end
-user.order.car=Rented car
-user.order.order_price=Order price
-user.order.comment=Comment
-user.order.not_exists=You have no orders yet
-user.order.message_start=Go to the
-user.order.message_end=to place an order
+order.status.new=new
+order.status.in_process=in process
+order.status.paid=paid
+order.status.rent=rent
+order.status.ended=ended
+order.status.expired=expired
+order.status.canceled=canceled
+order.date=Date
+order.status=Status
+order.rental_start=Rental start
+order.rental_end=Rental end
+order.car=Rented car
+order.price=Order price
+order.comment=Comment
+order.not_exists=You have no orders yet
+order.message_start=Go to the
+order.message_end=to place an order
 
 #passport
-user.surname=Surname
-user.name=Name
-user.thirdname=Third Name
-user.date_of_birth=Date of birth
-user.address=Address
-user.passport.serial_and_number=Serial and number
-user.passport.issued_by=Issued by
-user.passport.date_of_issue=Date of issue
+passport.surname=Surname
+passport.name=Name
+passport.thirdname=Third Name
+passport.date_of_birth=Date of birth
+passport.address=Address
+passport.serial_and_number=Serial and number
+passport.issued_by=Issued by
+passport.date_of_issue=Date of issue
 
 #card
-user.card.not_exists=You don't have any linked cards yet
+card.not_exists=You don't have any linked cards yet
 
 #car
-car.transmission_title=Transmission
+car.transmission=Transmission
 car.transmission.at=Automatic
 car.transmission.mt=Mechanical
+car.engine_size=Engine capacity
+car.engine_size_unit=l.
+car.fuel_type=Fuel type
+car.fuel_type.petrol=petrol
+car.fuel_type.diesel=diesel
+car.description=Short description
+car.features=Features
 
 #footer
-help_title=Help
-about_rent_title=About rental
-information_title=Information
+more_about_us=More about us
+company_history=History of the company
+mobile_app=Mobile app
+news_about_us=About us in the news
+reviews=Reviews
+vacancies=Vacancies
+help=Help
+about_rent=About rental
+information=Information
+test.404_page=Test page 404
+test.500_page=Test page 500
 copyright=All rights reserved © Site development
