--- a/src/main/resources/appLocalization/app_ru.properties
+++ b/src/main/resources/appLocalization/app_ru.properties
@@ -2,28 +2,28 @@
 header.button.ru=РУ
 header.button.en=EN
 hello=Привет
-log_in_title=Войти
-log_out_title=Выйти
+log_in=Войти
+log_out=Выйти
 go_to_main_page=вернуться на главную
-registration_title=Регистрация
-news_title=Новости
-rules_title=Правила аренды
-stocks_title=Акции
-catalog_title=Каталог
-contacts_title=Контакты
+registration=Регистрация
+news=Новости
+rules=Правила аренды
+stocks=Акции
+catalog=Каталог
+contacts=Контакты
 incorrect_data=Некорректные данные, попробуйте еще раз
 error_404_title=Извините, страница не найдена!
 error_500_title=Извините, непредвиденная ошибка!
 error_500_desc=Мы работаем над устранением ошибки. Скоро все будет работать
-stack-trace-title=Если вы разработчик, это вам поможет
+stack_trace_title=Если вы разработчик, это вам поможет
 error.data_retrieve=Ошибка получения данных, попробуйте позже
+price_per_day=BYN в сутки
+to_rent=Арендовать
 
 #main page content
-searching_form_title=Поиск доступных авто
+searching_form=Поиск доступных авто
 pick_up_date=Начало аренды
-pick_up_time=Время
 drop_off_date=Конец аренды
-drop_off_time=Время
 
 #log in page
 login.wrong_data=Неверный логин или пароль!
@@ -36,67 +36,83 @@ reg.successful=Вы успешно зарегистрированны!
 reg_info.text.start=Теперь вы можете
 reg_info.text.link=войти
 reg_info.text.end=под своим логином и паролем
-reg_user_exists=Извините, такой пользователь уже существует!
+reg.user_exists=Извините, такой пользователь уже существует!
 reg.error=Извините, ошибка регистрации, попробуйте позже!
 reg.agreement=Нажимая кнопку «Зарегистрироваться»,
 reg.agreement.link=вы даете согласие на обработку своих персональных данных
 
 #form data
-form.login=Логин
-form.email=Email
-form.password=Пароль
-form.phone=Телефон
-form.search_title=Найти
-form.register=Зарегистрироваться
+login=Логин
+email=Email
+password=Пароль
+phone=Телефон
+search=Найти
+register=Зарегистрироваться
 
-#user page
+#personal page
 user.role=Роль
 user.rating=Рейтинг
 user.discount=Ваша скидка
-user.orders.title=Ваши заказы
-user.all_orders_title=Все заказы
-user.passport_data.title=Паспортные данные
-user.cards.title=Банковские карты
+user.orders=Ваши заказы
+user.all_orders=Все заказы
+user.all_users=Все пользователи
+user.passport_data=Паспортные данные
+user.cards=Банковские карты
 
 #order
-user.order.status.new=новый
-user.order.status.in_process=обрабатывается
-user.order.status.paid=оплачен
-user.order.status.rent=аренда
-user.order.status.ended=завершен
-user.order.status.expired=просрочен
-user.order.status.canceled=отменен
-user.order.date=Дата
-user.order.status=Статус
-user.order.rental_start=Начало аренды
-user.order.rental_end=Конец аренды
-user.order.car=Автомобиль
-user.order.order_price=Сумма аренды
-user.order.comment=Комментарий
-user.order.not_exists=У вас еще не было заказов
-user.order.message_start=Перейдите в
-user.order.message_end=чтобы сделать заказ
+order.status.new=новый
+order.status.in_process=обрабатывается
+order.status.paid=оплачен
+order.status.rent=аренда
+order.status.ended=завершен
+order.status.expired=просрочен
+order.status.canceled=отменен
+order.date=Дата
+order.status=Статус
+order.rental_start=Начало аренды
+order.rental_end=Конец аренды
+order.car=Автомобиль
+order.price=Сумма аренды
+order.comment=Комментарий
+order.not_exists=У вас еще не было заказов
+order.message_start=Перейдите в
+order.message_end=чтобы сделать заказ
 
 #passport
-user.surname=Фамилия
-user.name=Имя
-user.thirdname=Отчество
-user.date_of_birth=Дата рождения
-user.address=Адрес
-user.passport.serial_and_number=Серия и номер
-user.passport.issued_by=Выдан
-user.passport.date_of_issue=Дата выдачи
+passport.surname=Фамилия
+passport.name=Имя
+passport.thirdname=Отчество
+passport.date_of_birth=Дата рождения
+passport.address=Адрес
+passport.serial_and_number=Серия и номер
+passport.issued_by=Выдан
+passport.date_of_issue=Дата выдачи
 
 #card
-user.card.not_exists=У вас еще нет привязанных карт
+card.not_exists=У вас еще нет привязанных карт
 
 #car
-car.transmission_title=Трансмиссия
+car.transmission=Коробка передач
 car.transmission.at=Автоматическая
 car.transmission.mt=Механическая
+car.engine_size=Объем двигателя
+car.engine_size_unit=л.
+car.fuel_type=Тип топлива
+car.fuel_type.petrol=бензин
+car.fuel_type.diesel=дизель
+car.description=Краткое описание
+car.features=Особенности
 
 #footer
-help_title=Помощь
-about_rent_title=Об аренде
-information_title=Информация
+more_about_us=Больше о нас
+company_history=История компании
+mobile_app=Мобильное приложение
+news_about_us=О нас в новостях
+reviews=Отзывы
+vacancies=Вакансии
+help=Помощь
+about_rent=Об аренде
+information=Информация
+test.404_page=Тест страницы 404
+test.500_page=Тест страницы 500
 copyright=Все права защищены © Разработка сайта
