--- a/src/main/resources/appLocalization/app_ru.properties
+++ b/src/main/resources/appLocalization/app_ru.properties
@@ -18,7 +18,11 @@ error_500_desc=Мы работаем над устранением ошибки.
 stack_trace_title=Если вы разработчик, это вам поможет
 error.data_retrieve=Ошибка получения данных, попробуйте позже
 price_per_day=BYN в сутки
+currency=BYN
 to_rent=Арендовать
+data.edit=изменить
+data.confirm=подтвердить
+general_information=Общая информация
 
 #main page content
 searching_form=Поиск доступных авто
@@ -58,10 +62,11 @@ user.all_orders=Все заказы
 user.all_users=Все пользователи
 user.passport_data=Паспортные данные
 user.cards=Банковские карты
+user.registration_date=Дата регистрации
 
 #order
 order.status.new=новый
-order.status.in_process=обрабатывается
+order.status.pending=обрабатывается
 order.status.paid=оплачен
 order.status.rent=аренда
 order.status.ended=завершен
@@ -72,7 +77,7 @@ order.status=Статус
 order.rental_start=Начало аренды
 order.rental_end=Конец аренды
 order.car=Автомобиль
-order.price=Сумма аренды
+order.bill_sum=Сумма счета
 order.comment=Комментарий
 order.not_exists=У вас еще не было заказов
 order.message_start=Перейдите в
@@ -90,6 +95,7 @@ passport.date_of_issue=Дата выдачи
 
 #card
 card.not_exists=У вас еще нет привязанных карт
+card.not_exist_2=Нет привязанных карт
 
 #car
 car.transmission=Коробка передач
@@ -102,6 +108,7 @@ car.fuel_type.petrol=бензин
 car.fuel_type.diesel=дизель
 car.description=Краткое описание
 car.features=Особенности
+car.nearest_available_date=Ближайшая доступная дата
 
 #footer
 more_about_us=Больше о нас
