--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -18,7 +18,11 @@ error_500_desc=We are working on fixing the problem. Be back soon
 stack_trace_title=If you are a developer this will help you
 error.data_retrieve=Data retrieval error, please try later
 price_per_day=BYN per day
+currency=BYN
 to_rent=Rent
+data.edit=edit
+data.confirm=confirm
+general_information=General information
 
 #main page content
 searching_form=Search for available cars
@@ -58,10 +62,11 @@ user.all_orders=All orders
 user.all_users=All users
 user.passport_data=Passport data
 user.cards=Bank cards
+user.registration_date=Registration date
 
 #order
 order.status.new=new
-order.status.in_process=in process
+order.status.pending=in process
 order.status.paid=paid
 order.status.rent=rent
 order.status.ended=ended
@@ -72,7 +77,7 @@ order.status=Status
 order.rental_start=Rental start
 order.rental_end=Rental end
 order.car=Rented car
-order.price=Order price
+order.bill_sum=Bill amount
 order.comment=Comment
 order.not_exists=You have no orders yet
 order.message_start=Go to the
@@ -90,6 +95,7 @@ passport.date_of_issue=Date of issue
 
 #card
 card.not_exists=You don't have any linked cards yet
+card.not_exist_2=No linked cards
 
 #car
 car.transmission=Transmission
@@ -102,6 +108,7 @@ car.fuel_type.petrol=petrol
 car.fuel_type.diesel=diesel
 car.description=Short description
 car.features=Features
+car.nearest_available_date=Nearest available date
 
 #footer
 more_about_us=More about us
