--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -11,18 +11,30 @@ rules=Rental rules
 stocks=Stock
 catalog=Catalog
 contacts=Contacts
-incorrect_data=Incorrect data, please try again
 error_404_title=Sorry, the page not found!
 error_500_title=Sorry, unexpected error!
 error_500_desc=We are working on fixing the problem. Be back soon
 stack_trace_title=If you are a developer this will help you
-error.data_retrieve=Data retrieval error, please try later
 price_per_day=BYN per day
 currency=BYN
 to_rent=Rent
+general_information=General information
+surname=Surname
+name=Name
+save_title=Save
+cancel_title=Cancel
+delete.warning=The action cannot be undone, are you sure?
+
+#data
 data.edit=edit
 data.confirm=confirm
-general_information=General information
+data.cancel=cancel
+data.update_error=Update error, data not updated
+data.add_error=Error adding data
+data.incorrect_data=Incorrect data, please try again
+data.retrieve_error=Data retrieval error, please try later
+data.updated=Data updated
+data.delete_error=Delete error
 
 #main page content
 searching_form=Search for available cars
@@ -57,11 +69,12 @@ register=Register
 user.role=Role
 user.rating=Rating
 user.discount=Your discount
+user.details=Personal data
 user.orders=Your orders
 user.all_orders=All orders
 user.all_users=All users
 user.passport_data=Passport data
-user.cards=Bank cards
+user.bankcards_title=Bank cards
 user.registration_date=Registration date
 
 #order
@@ -84,8 +97,6 @@ order.message_start=Go to the
 order.message_end=to place an order
 
 #passport
-passport.surname=Surname
-passport.name=Name
 passport.thirdname=Third Name
 passport.date_of_birth=Date of birth
 passport.address=Address
@@ -93,9 +104,17 @@ passport.serial_and_number=Serial and number
 passport.issued_by=Issued by
 passport.date_of_issue=Date of issue
 
-#card
-card.not_exists=You don't have any linked cards yet
-card.not_exist_2=No linked cards
+#bankcard
+bankcard.adding_title=Add new card
+bankcard.number_title=Card number
+bankcard.valid_true_title=Valid true
+bankcard.month_title=mm
+bankcard.year_title=yy
+bankcard.owner_title=Card owner
+bankcard.data_retention_guarantee=100% data protection guarantee
+bankcard.message.exists=This card is already registered
+bankcard.message.not_exists=You don't have any linked cards yet
+bankcard.message.not_exist_for_admin=No linked cards
 
 #car
 car.transmission=Transmission
