--- a/src/main/resources/appLocalization/app_ru.properties
+++ b/src/main/resources/appLocalization/app_ru.properties
@@ -11,18 +11,30 @@ rules=Правила аренды
 stocks=Акции
 catalog=Каталог
 contacts=Контакты
-incorrect_data=Некорректные данные, попробуйте еще раз
 error_404_title=Извините, страница не найдена!
 error_500_title=Извините, непредвиденная ошибка!
 error_500_desc=Мы работаем над устранением ошибки. Скоро все будет работать
 stack_trace_title=Если вы разработчик, это вам поможет
-error.data_retrieve=Ошибка получения данных, попробуйте позже
 price_per_day=BYN в сутки
 currency=BYN
 to_rent=Арендовать
+general_information=Общая информация
+surname=Фамилия
+name=Имя
+save_title=Сохранить
+cancel_title=Отменить
+delete.warning=Действие нельзя отменить, вы уверены?
+
+#data
 data.edit=изменить
 data.confirm=подтвердить
-general_information=Общая информация
+data.cancel=отменить
+data.update_error=Ошибка обновления, данные не обновлены
+data.add_error=Ошибка добавления данных
+data.incorrect_data=Некорректные данные, попробуйте еще раз
+data.retrieve_error=Ошибка получения данных, попробуйте позже
+data.updated=Данные обновлены
+data.delete_error=Ошибка удаления
 
 #main page content
 searching_form=Поиск доступных авто
@@ -57,11 +69,12 @@ register=Зарегистрироваться
 user.role=Роль
 user.rating=Рейтинг
 user.discount=Ваша скидка
+user.details=Личные данные
 user.orders=Ваши заказы
 user.all_orders=Все заказы
 user.all_users=Все пользователи
 user.passport_data=Паспортные данные
-user.cards=Банковские карты
+user.bankcards_title=Банковские карты
 user.registration_date=Дата регистрации
 
 #order
@@ -84,8 +97,6 @@ order.message_start=Перейдите в
 order.message_end=чтобы сделать заказ
 
 #passport
-passport.surname=Фамилия
-passport.name=Имя
 passport.thirdname=Отчество
 passport.date_of_birth=Дата рождения
 passport.address=Адрес
@@ -93,9 +104,17 @@ passport.serial_and_number=Серия и номер
 passport.issued_by=Выдан
 passport.date_of_issue=Дата выдачи
 
-#card
-card.not_exists=У вас еще нет привязанных карт
-card.not_exist_2=Нет привязанных карт
+#bankcards
+bankcard.adding_title=Добавить новую карту
+bankcard.number_title=Номер карты
+bankcard.valid_true_title=Срок действия
+bankcard.month_title=мм
+bankcard.year_title=гг
+bankcard.owner_title=Держатель карты
+bankcard.data_retention_guarantee=100% гарантия защиты данных
+bankcard.message.exists=Такая карта уже зарегистрирована
+bankcard.message.not_exists=У вас еще нет привязанных карт
+bankcard.message.not_exist_for_admin=Нет привязанных карт
 
 #car
 car.transmission=Коробка передач
