--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -11,10 +11,6 @@ rules=Rental rules
 stocks=Stock
 catalog=Catalog
 contacts=Contacts
-error_404_title=Sorry, the page not found!
-error_500_title=Sorry, unexpected error!
-error_500_desc=We are working on fixing the problem. Be back soon
-stack_trace_title=If you are a developer this will help you
 price_per_day=BYN per day
 currency=BYN
 to_rent=Rent
@@ -23,7 +19,13 @@ surname=Surname
 name=Name
 save_title=Save
 cancel_title=Cancel
-delete.warning=The action cannot be undone, are you sure?
+
+#info
+warning.delete=The action cannot be undone, are you sure?
+warning.action_not_approved=Action not approved!
+error_404_title=Sorry, the page not found!
+error_500_title=Sorry, unexpected error!
+error_500_desc=We are working on fixing the problem. Be back soon
 
 #data
 data.edit=edit
@@ -114,7 +116,6 @@ bankcard.owner_title=Card owner
 bankcard.data_retention_guarantee=100% data protection guarantee
 bankcard.message.exists=This card is already registered
 bankcard.message.not_exists=You don't have any linked cards yet
-bankcard.message.not_exist_for_admin=No linked cards
 
 #car
 car.transmission=Transmission
