--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -9,7 +9,8 @@ registration=Registration
 news=News
 rules=Rental rules
 stocks=Stock
-catalog=Catalog
+cars_title=Cars
+our_cars_title=Our cars
 contacts=Contacts
 price_per_day=BYN per day
 currency=BYN
@@ -129,6 +130,7 @@ car.fuel_type.diesel=diesel
 car.description=Short description
 car.features=Features
 car.nearest_available_date=Nearest available date
+car.discount_title=Your discount
 
 #footer
 more_about_us=More about us
