--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -20,6 +20,7 @@ surname=Surname
 name=Name
 save_title=Save
 cancel_title=Cancel
+work_schedule=from 9:00 to 21:00 daily
 
 #info
 warning.delete=The action cannot be undone, are you sure?
@@ -34,9 +35,11 @@ data.confirm=confirm
 data.cancel=cancel
 data.update_error=Update error, data not updated
 data.add_error=Error adding data
+data.create_error=Creation error, please try later
 data.incorrect_data=Incorrect data, please try again
 data.retrieve_error=Data retrieval error, please try later
 data.updated=Data updated
+data.successfully=Successfully!
 data.delete_error=Delete error
 
 #main page content
@@ -82,7 +85,7 @@ user.registration_date=Registration date
 
 #order
 order.status.new=new
-order.status.pending=in process
+order.status.pending=processing
 order.status.paid=paid
 order.status.rent=rent
 order.status.ended=ended
@@ -90,10 +93,9 @@ order.status.expired=expired
 order.status.canceled=canceled
 order.date=Date
 order.status=Status
-order.rental_start=Rental start
-order.rental_end=Rental end
 order.car=Rented car
 order.bill_sum=Bill amount
+order.is_paid=Paid
 order.comment=Comment
 order.not_exists=You have no orders yet
 order.message_start=Go to the
@@ -129,7 +131,7 @@ car.fuel_type.petrol=petrol
 car.fuel_type.diesel=diesel
 car.description=Short description
 car.features=Features
-car.nearest_available_date=Nearest available date
+car.nearest_available_date=Available from
 car.discount_title=Your discount
 
 #footer
