--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -14,6 +14,7 @@ our_cars_title=Our cars
 contacts=Contacts
 price_per_day=BYN per day
 currency=BYN
+payment=Payment
 to_rent=Rent
 general_information=General information
 surname=Surname
@@ -91,6 +92,7 @@ order.status.rent=rent
 order.status.ended=ended
 order.status.expired=expired
 order.status.canceled=canceled
+order_title=Order
 order.date=Date
 order.status=Status
 order.car=Rented car
@@ -100,6 +102,14 @@ order.comment=Comment
 order.not_exists=You have no orders yet
 order.message_start=Go to the
 order.message_end=to place an order
+order.total=total
+order.days=days
+order.fill_out_data_in_office=Fill in the data in the office
+order.update_passport_data_in_office=Update passport data
+order.pay_in_office=Pay at the office
+order.use_other_card=Use another bankcard
+order.add_card=Add the bankcard
+order.use_linked_cards=Use linked bankcards
 
 #passport
 passport.thirdname=Third Name
@@ -133,6 +143,7 @@ car.description=Short description
 car.features=Features
 car.nearest_available_date=Available from
 car.discount_title=Your discount
+car.related_offers=You may also be interested in
 
 #footer
 more_about_us=More about us
