--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -14,7 +14,6 @@ our_cars_title=Our cars
 contacts=Contacts
 price_per_day=BYN per day
 currency=BYN
-payment=Payment
 to_rent=Rent
 general_information=General information
 surname=Surname
@@ -106,10 +105,15 @@ order.total=total
 order.days=days
 order.fill_out_data_in_office=Fill in the data in the office
 order.update_passport_data_in_office=Update passport data
-order.pay_in_office=Pay at the office
-order.use_other_card=Use another bankcard
-order.add_card=Add the bankcard
-order.use_linked_cards=Use linked bankcards
+
+#payment
+payment_title=Payment
+payment.to_pay=Pay
+payment.skip=Skip
+payment_order=Payment for order
+payment.total_sum=Total sum
+payment.use_another_bankcard=Use another bankcard
+payment.use_linked_cards=Use linked bankcards
 
 #passport
 passport.thirdname=Third Name
@@ -120,7 +124,7 @@ passport.issued_by=Issued by
 passport.date_of_issue=Date of issue
 
 #bankcard
-bankcard.adding_title=Add new card
+bankcard.adding_title=Add bankcard
 bankcard.number_title=Card number
 bankcard.valid_true_title=Valid true
 bankcard.month_title=mm
