--- a/src/main/resources/appLocalization/app_ru.properties
+++ b/src/main/resources/appLocalization/app_ru.properties
@@ -14,7 +14,6 @@ our_cars_title=Наши автомобили
 contacts=Контакты
 price_per_day=BYN в сутки
 currency=BYN
-payment=Оплата
 to_rent=Арендовать
 general_information=Общая информация
 surname=Фамилия
@@ -106,10 +105,15 @@ order.total=итого
 order.days=дней
 order.fill_out_data_in_office=Заполнить данные в офисе
 order.update_passport_data_in_office=Обновить паспортные данные
-order.pay_in_office=Оплатить в офисе
-order.use_other_card=Использовать другую карту
-order.add_card=Добавить банковскую карту
-order.use_linked_cards=Использовать привязанные карты
+
+#payment
+payment_title=Оплата
+payment.to_pay=Оплатить
+payment.skip=Пропустить
+payment_order=Оплата заказа
+payment.total_sum=Общая сумма
+payment.use_another_bankcard=Использовать другую банковскую карту
+payment.use_linked_cards=Использовать привязанные карты
 
 #passport
 passport.thirdname=Отчество
@@ -120,7 +124,7 @@ passport.issued_by=Выдан
 passport.date_of_issue=Дата выдачи
 
 #bankcards
-bankcard.adding_title=Добавить новую карту
+bankcard.adding_title=Добавить банковскую карту
 bankcard.number_title=Номер карты
 bankcard.valid_true_title=Срок действия
 bankcard.month_title=мм
