--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -31,15 +31,17 @@ error_500_desc=We are working on fixing the problem. Be back soon
 
 #data
 data.edit=edit
+data.editing=Editing
+data.change=change
 data.confirm=confirm
 data.cancel=cancel
 data.update_error=Update error, data not updated
 data.add_error=Error adding data
-data.create_error=Creation error, please try later
 data.incorrect_data=Incorrect data, please try again
+data.invalid_old_password=Password not confirmed
 data.retrieve_error=Data retrieval error, please try later
 data.updated=Data updated
-data.successfully=Successfully!
+data.login_updated=You can now log in using your new login
 data.delete_error=Delete error
 
 #main page content
@@ -82,11 +84,14 @@ user.all_users=All users
 user.passport_data=Passport data
 user.bankcards_title=Bank cards
 user.registration_date=Registration date
+user.old_password=Old password
+user.new_password=New password
 
 #order
 order.status.new=new
-order.status.pending=processing
+order.status.processing=processing
 order.status.paid=paid
+order.status.not_paid=not paid
 order.status.rent=rent
 order.status.ended=ended
 order.status.expired=expired
