--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -8,6 +8,7 @@ log_out=Log out
 go_to_main_page=go to main page
 registration=Registration
 news=News
+news.all_news=All news
 rules=Rental rules
 stocks=Stock
 cars_title=Cars
