--- a/src/main/resources/appLocalization/app_en.properties
+++ b/src/main/resources/appLocalization/app_en.properties
@@ -23,6 +23,8 @@ name=Name
 save_title=Save
 cancel_title=Cancel
 work_schedule=from 9:00 to 21:00 daily
+page_forward=Next
+page_back=Previous
 
 #info
 warning.delete=The action cannot be undone, are you sure?
@@ -98,6 +100,7 @@ order.status.rent=rent
 order.status.ended=ended
 order.status.expired=expired
 order.status.canceled=canceled
+order.status.denied=denied
 order_title=Order
 order.date=Date
 order.status=Status
@@ -112,6 +115,12 @@ order.total=total
 order.days=days
 order.fill_out_data_in_office=Fill in the data in the office
 order.update_passport_data_in_office=Update passport data
+
+#return_act
+return_date=Return date
+car_odometer=Total mileage
+car_damage=Damage
+fine=Fine
 
 #payment
 payment_title=Payment
